Horizontal scroll fix

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -14,8 +14,8 @@
 
 .page__section {
   position: relative;
-  max-width: 100%;
-  width: 880px;
+  width: 100%;
+  max-width: 880px;
   margin: 0 auto;
 }
 
